# flask-openapi3-plugins

./: LICENSE  README.md  get_latest_release.py
.github/workflows/: elements.yml  rapidoc.yml  rapipdf.yml  redoc.yml  scalar.yml  swagger.yml
flask-openapi-elements/: pyproject.toml
flask-openapi-elements/flask_openapi_elements/: __version__.py  plugins.py
flask-openapi-rapidoc/: pyproject.toml
flask-openapi-rapidoc/flask_openapi_rapidoc/: __version__.py  plugins.py
flask-openapi-rapipdf/: pyproject.toml
flask-openapi-rapipdf/flask_openapi_rapipdf/: plugins.py
flask-openapi-redoc/: pyproject.toml
flask-openapi-redoc/flask_openapi_redoc/: __version__.py  plugins.py
flask-openapi-scalar/: pyproject.toml
flask-openapi-scalar/flask_openapi_scalar/: __version__.py  plugins.py
flask-openapi-swagger/: pyproject.toml
flask-openapi-swagger/flask_openapi_swagger/: plugins.py
flask-openapi3-elements/: pyproject.toml
flask-openapi3-elements/flask_openapi3_elements/: __version__.py  plugins.py
flask-openapi3-rapidoc/: pyproject.toml
flask-openapi3-rapidoc/flask_openapi3_rapidoc/: __version__.py  plugins.py
flask-openapi3-rapipdf/: pyproject.toml
flask-openapi3-rapipdf/flask_openapi3_rapipdf/: plugins.py
flask-openapi3-redoc/: pyproject.toml
flask-openapi3-redoc/flask_openapi3_redoc/: __version__.py  plugins.py
flask-openapi3-scalar/: pyproject.toml
flask-openapi3-scalar/flask_openapi3_scalar/: __version__.py  plugins.py
flask-openapi3-scalar/flask_openapi3_scalar/templates/: __init__.py
flask-openapi3-scalar/flask_openapi3_scalar/templates/scalar/js/: scalar.standalone.js
flask-openapi3-swagger/: pyproject.toml
flask-openapi3-swagger/flask_openapi3_swagger/: __init__.py  __version__.py  plugins.py
(+9 files in other folders)
