[project]
name = "flask-openapi3-scalar"
description = "Provide Scalar UI for flask-openapi3."
readme = { text = "Provide Scalar UI for [flask-openapi3](https://github.com/luolingchun/flask-openapi3).", content-type = "text/markdown" }
license = { text = "MIT" }
maintainers = [{ name = "llc", email = "luolingchun@outlook.com" }]
classifiers = [
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.8"
dependencies = ["flask-openapi3"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/luolingchun/flask-openapi3-plugins/tree/master/flask-openapi3-scalar"
Documentation = "https://luolingchun.github.io/flask-openapi3/latest/Usage/UI_Templates/"

[project.entry-points."flask_openapi3.plugins"]
register = "flask_openapi3_scalar.plugins.RegisterPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flask_openapi3_scalar/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/flask_openapi3_scalar"
]


[tool.flake8]
per-file-ignores = ["__init__.py:F401"]
max-line-length = 120
count = true
